# Th-RHex

./: .gitignore  DEMO.md  LICENSE  QUICKSTART.md  README.md  docker-compose.yml  test_jacobian.py
.devcontainer/: devcontainer.json
docker/: Dockerfile.jazzy
docs/: URDF_IMPORT.md
scripts/: demo.sh  gen-env.sh  reset_robot.sh
src/: minimal_world.sdf
src/th_rhex_control/: package.xml  setup.cfg  setup.py
src/th_rhex_control/th_rhex_control/: jacobian_controller.py
src/th_rhex_description/: CMakeLists.txt  package.xml
src/th_rhex_description/config/: controllers.yaml
src/th_rhex_description/launch/: display.launch.py  (+1 more)
src/th_rhex_description_3leg/: CMakeLists.txt  package.xml
src/th_rhex_description_6leg/: CMakeLists.txt  package.xml
src/th_rhex_description_6leg/config/: controllers.yaml
src/th_rhex_description_6leg/launch/: display.launch.py  gazebo.launch.py
src/th_rhex_description_6leg/meshes/: fl_leg_link.STL  fl_wheel_link.STL  fr_leg_link.STL  fr_wheel_link.STL  ml_leg_link.STL  ml_wheel_link.STL  mr_leg_link.STL  mr_wheel_link.STL  rl_leg_link.STL  rl_wheel_link.STL  rr_leg_link.STL  rr_wheel_link.STL
src/th_rhex_description_6leg/original_exports/3leg_Th_Rhex/: package.xml
src/th_rhex_description_6leg/original_exports/3leg_Th_Rhex/launch/: gazebo.launch
src/th_rhex_description_6leg/original_exports/3leg_Th_Rhex/meshes/: ml_leg_link.STL
src/th_rhex_description_6leg/rviz/: urdf.rviz
src/th_rhex_description_6leg/urdf/: 3leg_Th_Rhex.urdf  6leg_Th_Rhex_v1.urdf  th_rhex.urdf.xacro
src/th_rhex_description_6leg/worlds/: minimal_world.sdf
(+23 files in other folders)
