<?xml version="1.0"?>
<package format="3">
    <name>th_rhex_control</name>
    <version>0.1.0</version>
    <description>Jacobian velocity controller for Th-RHex</description>
    <maintainer email="andrikp@seas.upenn.edu">you</maintainer>
    <license>MIT</license>

    <depend>rclpy</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>

    <export>
        <build_type>ament_python</build_type>
    </export>
</package>
